in progress to sync azure

--- a/Frontend-Webapp/Components/Pages/Courses.razor
+++ b/Frontend-Webapp/Components/Pages/Courses.razor
@@ -70,7 +70,7 @@
     {
         try
         {
-            courses = await Http.GetFromJsonAsync<CourseModel[]>("courseprovider-win23jsbackend-sannahansson.azurewebsites.net/api/courses");
+            courses = await Http.GetFromJsonAsync<CourseModel[]>(Environment.GetEnvironmentVariable("COURSES_APIURI"));
 
         }
         catch(Exception ex)
