--- a/Frontend-Webapp/Components/App.razor
+++ b/Frontend-Webapp/Components/App.razor
@@ -5,8 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="/" />
-    <link rel="stylesheet" href="/https://kit.fontawesome.com/e83f67faa0.css" crossorigin="anonymous" >
-   
+    <link rel="stylesheet" href="/https://kit.fontawesome.com/e32b5a4659.js" crossorigin="anonymous">    
     <link rel="stylesheet" href="/site.css" />
     <link rel="stylesheet" href="Frontend-Webapp.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
