--- a/Frontend-Webapp/Components/Layout/ManageNavMenu.razor
+++ b/Frontend-Webapp/Components/Layout/ManageNavMenu.razor
@@ -3,35 +3,26 @@
 
 @inject SignInManager<ApplicationUser> SignInManager
 
-<ul class="nav nav-pills flex-column">
-    <li class="nav-item">
-        <NavLink class="nav-link" href="Account/Manage" Match="NavLinkMatch.All">Profile</NavLink>
-    </li>
-    <li class="nav-item">
-        <NavLink class="nav-link" href="Account/Manage/Email">Email</NavLink>
-    </li>
-    <li class="nav-item">
-        <NavLink class="nav-link" href="Account/Manage/ChangePassword">Password</NavLink>
-    </li>
-    @if (hasExternalLogins)
-    {
-        <li class="nav-item">
-            <NavLink class="nav-link" href="Account/Manage/ExternalLogins">External logins</NavLink>
-        </li>
-    }
-    <li class="nav-item">
-        <NavLink class="nav-link" href="Account/Manage/TwoFactorAuthentication">Two-factor authentication</NavLink>
-    </li>
-    <li class="nav-item">
-        <NavLink class="nav-link" href="Account/Manage/PersonalData">Personal data</NavLink>
-    </li>
-</ul>
+    <img class="profile-image" src="/images/images/uploads/profiles/avatar.png" alt="profile" />
+
+
+    <nav>
+        <NavLink class="btn-nav" href="Account/Manage" Match="NavLinkMatch.All">
+            <i class="fa-regular fa-"></i>
+            Account details
+            </NavLink>
+    <NavLink @onclick="HandleSignOut" class="btn-nav" href="/">
+        Sign Out
+        </NavLink>
+    </nav>  
+   
+  
+  
+
 
 @code {
-    private bool hasExternalLogins;
-
-    protected override async Task OnInitializedAsync()
+    private async Task HandleSignOut()
     {
-        hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
+        await SignInManager.SignOutAsync();
     }
 }
